# django-recipes

./: .env  .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yml  fixture.sh  ingredientname.json  manage.py  pyproject.toml  run.sh  setup.cfg
recipes/: admin.py  forms.py  models.py  recipe_form.py  urls.py  views.py
recipes/fixtures/: ingredient.json  ingredientunit.json  recipe.json  recipeingredient.json
recipes/management/commands/: initadmin.py
recipes/migrations/: 0001_initial.py  0002_alter_ingredient_name.py  0002_alter_recipe_slug.py  0003_alter_ingredient_name.py  0003_rename_name_ingredientname_ing_name.py
recipes/templates/recipes/: base.html  recipe_detail.html  recipe_list.html
recipes/templates/recipes/includes/: _navbar.html  _sidemenu.html
recipesBook/: asgi.py  settings.py  urls.py  wsgi.py
styles/: darglint.toml  file-structure.toml  flake8.toml  isort.toml  nitpick-style.toml
