[tool.poetry]
name = "recipesbook"
version = "0.5.0"
description = ""
authors = ["Sevenamber <sevenamber@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.2"
django-environ = "^0.8.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
wemake-python-styleguide = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
